# banking-app

./: .gitignore  GEMINI.md
backend/: pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
